fixed loader issue on ie

--- a/src/assets/css/msg.css
+++ b/src/assets/css/msg.css
@@ -1,15 +1,19 @@
 .tap-msg{
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
   justify-content: center;
   align-items: center;
 }
 
 .tap-msg-wrapper{
-  display: flex;
-  flex-direction: column;
+    /* background-color: red; */
+  /* display: flex;
+  flex-direction: column; */
+  /* position: absolute;
+  top: 42%;
+  left: 46%; */
   align-items: center;
   -webkit-animation-name: fadeIn; /* Safari 4.0 - 8.0 */
   -webkit-animation-duration: 0.7s; /* Safari 4.0 - 8.0 */
@@ -45,4 +49,16 @@
   color: #9D9FA4;
   letter-spacing: -0.06px;
   text-align: center;
+}
+
+@media(max-width: 440px){
+  .tap-msg-wrapper {
+    display: flex;
+    position: unset;
+    flex-direction: column;
+  }
+  .tap-msg {
+    display: flex;
+    flex-direction: row;
+  }
 }
